styles/index.css
*{
    margin: 0px;
    padding: 0px;
    box-sizing: border-box;
    font-family: "Inter", sans-serif;
    font-optical-sizing: auto;
}

/* Nav CSS */
.navi{
    display: flex;
    justify-content: space-between;
    align-items: center;
    max-width: 1600px;
    height: 92px;
    padding: 16px 120px;
}
.navi ul{
    display: flex;
    list-style: none;
    max-width: 365px;
    height: 24px;
    gap: 32px;
}
.navi ul a{
    text-decoration: none;
    color: black;
    font-size: 16px;
    font-weight: 500;

}
.logo{
    max-width: 139px;
    height: 60px;
}
.NavButton{
    padding: 12.5px 16px;
    background-color: #30B868;
    color: white;
    border: none;
    border-radius: 4px;
    font-size: 16px;
    font-weight: 600;
    cursor: pointer;
}

/* Hero CSS */
.Hero{
    background-image: url(../assets/hero-bg.png);
    max-width: 1600px;
    height: 674px;
    /* display: flex; */
    justify-content: center;
    align-items: center;
    padding: 115.5px 120px 179.5px 120px;
    text-align: center;
}
 #early{
    padding: 8px 12px 8px 34px;
    display: inline-block;
    background-color: white;
    font-size: 16px;
    font-weight: 500;
    color: #30B868;
    border-radius: 1000px;
    margin-bottom: 16px;
   
 }
 #early::before{
    content: "";
    width: 12px;
    height: 12px;
    background-color: #30B868;
    border-radius: 50%;
    box-shadow: 0 0 0 4px rgba(48,184,104, 0.2);
    margin-right:4px;
 }
 
 .herotitle{

    /* width: 770px;
    height: 168px; */
    justify-content: center;
    display: flex;
    flex-direction: column;
    
    
 }
  #title2{
    margin-bottom: 16px;
    color: #21693f;
 }
 .herotitle h1{
    font-size: 70px;
    font-weight: 700;
    color: white;
 }
 .herotext{
    /* width: 770px; */
    font-size: 18px;
    font-weight: 400;
    color: white;
    align-items: center;
    justify-content: center;
    margin-bottom: 32px;
 }
 .btn{
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 16px;
    
 }
 .btn a{
    text-decoration: none;
 }
.button1{
    padding-top: 16.5px;
    padding-bottom: 16.5px;
    padding-right: 46px;
    padding-left: 16px;
    background-color: #30B868;
    border: none;
    display: flex;
    border-radius: 4px;
    font-size: 16px;
    font-weight: 600;
    color: white;
}
.button2{
    padding-top: 16px;
    padding-bottom: 16px;
    padding-right: 15.5px;
    padding-left: 45.5px;
    background-color: #21693f00 ;
    border: 1px solid white;
    border-radius: 4px;
    font-size: 16px;
    font-weight: 600;
    color: white;
}

/* sec2 css */
.second{
    max-width: 1600px;
    height: 448px;
    /* display: flex; */
    justify-content: center;
    align-items: center;
    padding: 50px 120px 179.5px 120px;
    text-align: center;
    background-color: #fbfbfb;
}
.secondtitle h1{ 
    font-size: 48px;
    font-weight: bold;
    margin-bottom: 16px;
    color: #001931;
    
}
.secondtitle p{
    color: #627382;
    font-size: 16px;
    font-weight: 400;
    margin-bottom: 44px;
}
.card{
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 24px;
    
}
.card h2{
    color: #001931;
    font-weight: 600;
    font-size: 24px;
    margin-bottom: 16px;
}
.card p{
    color: #627382;
    font-size: 16px;
    font-weight: 400;
    letter-spacing: -.5px;
}
.c1{
    height: 300px;
    width: 322px;
    padding: 24px;
    background-color:white;
    border-radius: 8px;
    box-shadow: 0px 0px 30px  #cfcfcf46;
}

.c1 img{
    background-color: #F95555;
    padding: 14px;
    border-radius: 50%;
    margin-bottom: 16px;
    margin-top: 42.5px;
} 
.c2{
    height: 300px;
    width: 322px;
    padding: 24px;
    background-color: white;
    border-radius: 8px;
    box-shadow: 0px 0px 30px  #cfcfcf46;
}
.c2 img{
    background-color: #F95555;
    padding: 14px;
    border-radius: 50%;
    margin-bottom: 16px;
    margin-top: 42.5px;
}
.c3{
    height: 300px;
    width: 322px;
    padding: 24px;
    background-color: white;
    border-radius: 8px;
    box-shadow: 0px 0px 30px  #cfcfcf46;
}
.c3 img{
    background-color: #F95555;
    padding: 14px;
    border-radius: 50%;
    margin-bottom: 16px;
    margin-top: 42.5px;
}
.c4{
    height: 300px;
    width: 322px;
    padding: 24px;
    background-color: white;
    border-radius: 8px;
    box-shadow: 0px 0px 30px  #cfcfcf46;
}
.c4 img{
    background-color: #F95555;
    padding: 14px;
    border-radius: 50%;
    margin-bottom: 16px;
    margin-top: 42.5px;
}

